--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "jsdom": "^20.0.0",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
